Reduce Razor Components template to one project. Fixes #6883

--- a/src/ProjectTemplates/Web.ProjectTemplates/content/RazorComponentsWeb-CSharp/Components/Pages/FetchData.cshtml
+++ b/src/ProjectTemplates/Web.ProjectTemplates/content/RazorComponentsWeb-CSharp/Components/Pages/FetchData.cshtml
@@ -1,5 +1,5 @@
-﻿@page "/fetchdata"
-@using RazorComponentsWeb_CSharp.App.Services
+@page "/fetchdata"
+@using RazorComponentsWeb_CSharp.Services
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
