--- a/src/ProjectTemplates/Web.ProjectTemplates/content/RazorComponentsWeb-CSharp/Components/_ViewImports.cshtml
+++ b/src/ProjectTemplates/Web.ProjectTemplates/content/RazorComponentsWeb-CSharp/Components/_ViewImports.cshtml
@@ -2,5 +2,4 @@
 @using Microsoft.AspNetCore.Components.Layouts
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
-@using RazorComponentsWeb_CSharp.App
-@using RazorComponentsWeb_CSharp.App.Shared
+@using RazorComponentsWeb_CSharp.Components.Shared
