--- a/src/Components/test/testassets/BasicTestApp/CascadingValueTest/CascadingValueReceiveFixedByInterface.cshtml
+++ b/src/Components/test/testassets/BasicTestApp/CascadingValueTest/CascadingValueReceiveFixedByInterface.cshtml
@@ -11,7 +11,9 @@
 <p>
     @(nameof(CascadingValueReceiveFixedByInterface)) render count:
     <strong id="receive-by-interface-num-renders">@numRenders</strong>
-    <button id="decrement-count" onclick=@Ancestor.DecrementCount>Decrement</button>
+
+    @* Prevent rerendering this component when the button is clicked. *@
+    <button id="decrement-count" onclick=@(EventCallback.Factory.Create(Ancestor, Ancestor.DecrementCount))>Decrement</button>
 </p>
 
 @functions {
