--- a/src/Components/test/testassets/BasicTestApp/EventCallbackTest/EventCallbackCases.cshtml
+++ b/src/Components/test/testassets/BasicTestApp/EventCallbackTest/EventCallbackCases.cshtml
@@ -10,29 +10,29 @@
 </div>
 <div id="capturing_lambda">
     <h3>Passing Capturing Lambda to Button</h3>
-    <InnerButton OnClick="@EventCallback.Factory.Create(this, () => { GC.KeepAlive(this); })" Text="Capturing Lambda" />
+    <InnerButton OnClick="@(() => { GC.KeepAlive(this); })" Text="Capturing Lambda" />
 </div>
 <div id="unbound_lambda">
     <h3>Passing Unbound Lambda to Button</h3>
-    <InnerButton OnClick="@EventCallback.Factory.Create(this, () => { })" Text="Unbound Lambda" />
+    <InnerButton OnClick="@(() => { })" Text="Unbound Lambda" />
 </div>
 <div id="unbound_lambda_nested">
     <h3>Passing Unbound Lambda to Nested Button</h3>
-    <MiddleButton OnClick="@EventCallback.Factory.Create(this, () => { })" Text="Unbound Lambda Nested" />
+    <MiddleButton OnClick="@(() => { })" Text="Unbound Lambda Nested" />
 </div>
 <div id="unbound_lambda_strongly_typed">
     <h3>Passing Capturing Lambda to Strongly Typed Button</h3>
-    <StronglyTypedButton OnClick="@(EventCallback.Factory.Create<UIMouseEventArgs>(this, () => { GC.KeepAlive(this); }))" Text="Unbound Lambda Strongly-Typed" />
+    <StronglyTypedButton OnClick="@(() => { GC.KeepAlive(this); })" Text="Unbound Lambda Strongly-Typed" />
 </div>
 <div id="unbound_lambda_child_content">
     <h3>Passing Child Content</h3>
     <TemplatedControl>
-        <button onclick="@EventCallback.Factory.Create(this, () => { })">Unbound Lambda Child Content</button>
+        <button onclick="@(() => { })">Unbound Lambda Child Content</button>
     </TemplatedControl>
 </div>
 <div id="unbound_lambda_bind_to_component">
     <h3>Passing Child Content</h3>
-    <ButtonComponent Count="@buttonComponentCount" CountChanged="@(EventCallback.Factory.Create<int>(this, () => { }))" Text="Unbound Lambda Bind-To-Component" />
+    <ButtonComponent bind-Count="buttonComponentCount" Text="Unbound Lambda Bind-To-Component" />
 </div>
 
 @functions {
